k8s/service-mesh/gateway/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pixelcore-gateway
  namespace: pixelcore
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.pixelcore.io"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.pixelcore.io"
    tls:
      mode: SIMPLE
      credentialName: pixelcore-tls-cert
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: pixelcore-gateway-cn
  namespace: pixelcore
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*.pixelcore.cn"
    tls:
      httpsRedirect: true
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - "*.pixelcore.cn"
    tls:
      mode: SIMPLE
      credentialName: pixelcore-cn-tls-cert
